# HERTZ-AI-CHAT

./: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  LLM_BACKEND_GUIDE.md  QUICK_START.md  README.md  README_LLM_BACKEND.md  TROUBLESHOOTING.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/aichat/: MainActivity.kt
android/cpp/: CMakeLists.txt  llama_wrapper.cpp  llama_wrapper.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/pages/: about_page.dart  chat_page.dart  notification_settings_page.dart  privacy_security_page.dart  settings_page.dart
lib/services/: ai_service.dart  chat_history_service.dart  example_usage.dart  llm_ffi.dart  model_catalog.dart  model_manager.dart  native_library_loader.dart  notification_service.dart
lib/theme/: app_theme.dart
lib/widgets/: chat_input_bar.dart  file_upload_overlay.dart  model_selector_overlay.dart  sidebar.dart  top_bar.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
